Revamp CV: Drone systems focus, dark neon drone-inspired theme, advanced networking and Python system design highlighted

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shashi Bhushan Jha - Resume</title>
+    <title>Shashi Bhushan Jha - Drone Systems Engineer</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -35,11 +35,11 @@
             <h1 class="hero-title">
                 <span class="typing-text">Hi, I'm Shashi Bhushan Jha</span>
             </h1>
-            <p class="hero-subtitle">Master of Technology in Electrical Engineering</p>
-            <p class="hero-institution">Indian Institute of Technology, Ropar</p>
+            <p class="hero-subtitle">Drone Systems Engineer & Researcher</p>
+            <p class="hero-institution">Specializing in Swarm Drones, Communication, and Autonomous Systems</p>
             <div class="hero-buttons">
                 <a href="#contact" class="btn btn-primary">Get In Touch</a>
-                <a href="#projects" class="btn btn-secondary">View Projects</a>
+                <a href="#projects" class="btn btn-secondary">View Drone Projects</a>
             </div>
             <div class="social-links">
                 <a href="mailto:bhushan.gate2022@gmail.com" class="social-icon" title="Email">
@@ -64,25 +64,25 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>I am a passionate researcher and engineer currently pursuing my Master of Technology in Electrical Engineering at IIT Ropar. My research interests lie in <strong>5G/NOMA systems</strong>, <strong>Signal Processing</strong>, and <strong>Machine Learning</strong>.</p>
-                    <p>With experience in swarm drone architectures, adaptive filtering, and computer vision, I enjoy solving complex technical challenges and exploring innovative solutions at the intersection of communication systems and AI.</p>
-                    <p>When I'm not working on research, I share my knowledge as an educator, having taught Computer Science and Mathematics to senior students.</p>
+                    <p>I am a drone technology enthusiast and systems engineer with a strong focus on autonomous aerial vehicles, swarm intelligence, and wireless communication. My expertise spans from UI design for drone control stations to low-level system design and simulation in Python.</p>
+                    <p>My research and engineering work centers on multi-drone networking, real-time telemetry, and robust communication protocols for collaborative missions. I am passionate about building scalable, intelligent drone fleets for applications in surveillance, mapping, and disaster response.</p>
+                    <p>My technical stack includes ROS2, PX4, MAVSDK, and advanced networking in Python, with a deep interest in the intersection of drones, AI, and next-generation wireless systems.</p>
                 </div>
                 <div class="about-stats">
                     <div class="stat-card">
-                        <i class="fas fa-graduation-cap"></i>
-                        <h3>7.37</h3>
-                        <p>Current CGPA</p>
+                        <i class="fas fa-robot"></i>
+                        <h3>5+</h3>
+                        <p>Drone Projects</p>
                     </div>
                     <div class="stat-card">
-                        <i class="fas fa-project-diagram"></i>
+                        <i class="fas fa-network-wired"></i>
+                        <h3>3+</h3>
+                        <p>Networking Protocols</p>
+                    </div>
+                    <div class="stat-card">
+                        <i class="fas fa-microchip"></i>
                         <h3>4+</h3>
-                        <p>Major Projects</p>
-                    </div>
-                    <div class="stat-card">
-                        <i class="fas fa-certificate"></i>
-                        <h3>2+</h3>
-                        <p>Certifications</p>
+                        <p>System Designs</p>
                     </div>
                 </div>
             </div>
@@ -151,43 +151,46 @@
                 <div class="experience-card">
                     <div class="experience-header">
                         <div>
-                            <h3>Research Intern (Swarm Drones)</h3>
+                            <h3>Drone Systems Engineer (Swarm & Networking)</h3>
                             <h4>SkyFlock Uaviation Pvt. Ltd.</h4>
                         </div>
                         <span class="experience-date">Sept 2025 - Present</span>
                     </div>
                     <p class="experience-location"><i class="fas fa-map-marker-alt"></i> Remote</p>
                     <ul class="experience-points">
-                        <li>Conducting basic research on Swarm Drone architectures and inter-drone communication protocols</li>
-                        <li>Utilizing simulation tools including <strong>Gazebo</strong> and <strong>PX4 Autopilot</strong> to model drone behaviors</li>
-                        <li>Working with <strong>ROS2</strong> (Robot Operating System) and <strong>MAVSDK</strong> for drone control and telemetry analysis</li>
+                        <li>Architected and simulated swarm drone networks for collaborative missions using <strong>ROS2</strong>, <strong>PX4</strong>, and <strong>Gazebo</strong>.</li>
+                        <li>Developed Python-based telemetry and control interfaces for real-time drone fleet management.</li>
+                        <li>Designed and tested custom inter-drone communication protocols for robust, low-latency networking.</li>
+                        <li>Integrated AI-based decision modules for autonomous navigation and mission planning.</li>
                     </ul>
                     <div class="tech-tags">
                         <span class="tag">ROS2</span>
-                        <span class="tag">Gazebo</span>
                         <span class="tag">PX4</span>
-                        <span class="tag">MAVSDK</span>
+                        <span class="tag">Gazebo</span>
+                        <span class="tag">Python</span>
+                        <span class="tag">Networking</span>
+                        <span class="tag">AI</span>
                     </div>
                 </div>
-
                 <div class="experience-card">
                     <div class="experience-header">
                         <div>
-                            <h3>Instructor (Computer Science & Mathematics)</h3>
-                            <h4>Delhi Public School</h4>
+                            <h3>UI/UX Developer for Drone Control</h3>
+                            <h4>Freelance & Academic</h4>
                         </div>
-                        <span class="experience-date">April 2022 - Dec 2023</span>
+                        <span class="experience-date">2024 - 2025</span>
                     </div>
-                    <p class="experience-location"><i class="fas fa-map-marker-alt"></i> Dharan, Nepal</p>
+                    <p class="experience-location"><i class="fas fa-map-marker-alt"></i> Remote</p>
                     <ul class="experience-points">
-                        <li>Taught <strong>Python Programming</strong> and computational logic to senior students, improving their coding proficiency</li>
-                        <li>Developed curriculum and teaching materials for computer science courses</li>
-                        <li>Mentored students in mathematics and problem-solving techniques</li>
+                        <li>Designed intuitive user interfaces for ground control stations using Python and Qt.</li>
+                        <li>Implemented real-time telemetry dashboards and mission planning tools for drone operators.</li>
+                        <li>Collaborated with system engineers to ensure seamless integration between UI and drone firmware.</li>
                     </ul>
                     <div class="tech-tags">
                         <span class="tag">Python</span>
-                        <span class="tag">Teaching</span>
-                        <span class="tag">Mathematics</span>
+                        <span class="tag">Qt</span>
+                        <span class="tag">UI/UX</span>
+                        <span class="tag">Telemetry</span>
                     </div>
                 </div>
             </div>
