--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
+            <button id="theme-toggle" title="Toggle light/dark mode" style="margin-left: 1rem; padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid var(--border-color); background: var(--bg-light); color: var(--text-dark); cursor: pointer; font-size: 1rem;">🌙</button>
             <div class="hamburger" id="hamburger">
                 <span></span>
                 <span></span>
@@ -484,6 +485,25 @@
     </button>
 
     <script src="script.js"></script>
+<script>
+// Theme toggle button logic
+const themeToggle = document.getElementById('theme-toggle');
+const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+const userTheme = localStorage.getItem('theme');
+if (userTheme === 'dark' || (!userTheme && prefersDark)) {
+    document.body.classList.add('dark-mode');
+    themeToggle.textContent = '☀️';
+} else {
+    document.body.classList.remove('dark-mode');
+    themeToggle.textContent = '🌙';
+}
+themeToggle.addEventListener('click', () => {
+    document.body.classList.toggle('dark-mode');
+    const isDark = document.body.classList.contains('dark-mode');
+    themeToggle.textContent = isDark ? '☀️' : '🌙';
+    localStorage.setItem('theme', isDark ? 'dark' : 'light');
+});
+</script>
 </body>
 </html>
 
