--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shashi Bhushan Jha - Resume</title>
-    <link rel="icon" type="image/jpeg" href="Drone.jpeg">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -22,7 +21,6 @@
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
-            <button id="theme-toggle" title="Toggle light/dark mode" style="margin-left: 1rem; padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid var(--border-color); background: var(--bg-light); color: var(--text-dark); cursor: pointer; font-size: 1rem;">🌙</button>
             <div class="hamburger" id="hamburger">
                 <span></span>
                 <span></span>
@@ -37,7 +35,7 @@
             <h1 class="hero-title">
                 <span class="typing-text">Hi, I'm Shashi Bhushan Jha</span>
             </h1>
-            <p class="hero-subtitle">M.Tech in Signal Processing & Communication</p>
+            <p class="hero-subtitle">Master of Technology in Electrical Engineering</p>
             <p class="hero-institution">Indian Institute of Technology, Ropar</p>
             <div class="hero-buttons">
                 <a href="#contact" class="btn btn-primary">Get In Touch</a>
@@ -66,47 +64,25 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>I am a Master of Technology student at the Indian Institute of Technology, Ropar, specializing in Signal Processing and Communication. My interests include embedded systems, hardware design, and the application of modern communication theory to real-world engineering problems.</p>
-                    <p>I have hands-on experience with microcontrollers, flight controllers, and simulation environments such as PX4 and Gazebo. I enjoy building and integrating hardware and software for robust, scalable, and innovative tech solutions.</p>
-                    <p>My technical stack includes Python, C/C++, ROS2, PX4, Gazebo, and embedded firmware development. I am passionate about bridging the gap between hardware and software in modern engineering.</p>
+                    <p>I am a passionate researcher and engineer currently pursuing my Master of Technology in Electrical Engineering at IIT Ropar. My research interests lie in <strong>5G/NOMA systems</strong>, <strong>Signal Processing</strong>, and <strong>Machine Learning</strong>.</p>
+                    <p>With experience in swarm drone architectures, adaptive filtering, and computer vision, I enjoy solving complex technical challenges and exploring innovative solutions at the intersection of communication systems and AI.</p>
+                    <p>When I'm not working on research, I share my knowledge as an educator, having taught Computer Science and Mathematics to senior students.</p>
                 </div>
-                <div class="about-visuals" style="display:flex;gap:2rem;flex-wrap:wrap;justify-content:center;margin-top:2rem;">
-                    <div style="text-align:center;">
-                        <img src="Drone.jpeg" alt="Drone" style="height:80px;filter:drop-shadow(0 0 8px #1976d2);border-radius:8px;background:#fff;">
-                        <div style="color:#1976d2;font-size:0.95rem;">Drone</div>
-                    </div>
-                    <div style="text-align:center;">
-                        <img src="Pixhawk.jpeg" alt="Pixhawk" style="height:80px;filter:drop-shadow(0 0 8px #1976d2);border-radius:8px;background:#fff;">
-                        <div style="color:#1976d2;font-size:0.95rem;">Pixhawk</div>
-                    </div>
-                    <div style="text-align:center;">
-                        <img src="PX4.png" alt="PX4" style="height:80px;filter:drop-shadow(0 0 8px #1976d2);border-radius:8px;background:#fff;">
-                        <div style="color:#1976d2;font-size:0.95rem;">PX4</div>
-                    </div>
-                    <div style="text-align:center;">
-                        <img src="Gazebo.png" alt="Gazebo" style="height:80px;filter:drop-shadow(0 0 8px #1976d2);border-radius:8px;background:#fff;">
-                        <div style="color:#1976d2;font-size:0.95rem;">Gazebo</div>
-                    </div>
-                    <div style="text-align:center;">
-                        <img src="MicoAir.jpeg" alt="MicroAir" style="height:80px;filter:drop-shadow(0 0 8px #1976d2);border-radius:8px;background:#fff;">
-                        <div style="color:#1976d2;font-size:0.95rem;">MicroAir FC</div>
-                    </div>
-                </div>
-                <div class="about-stats" style="margin-top:2rem;">
+                <div class="about-stats">
                     <div class="stat-card">
-                        <i class="fas fa-microchip"></i>
-                        <h3>Embedded Systems</h3>
-                        <p>Hardware & Firmware</p>
+                        <i class="fas fa-graduation-cap"></i>
+                        <h3>7.37</h3>
+                        <p>Current CGPA</p>
                     </div>
                     <div class="stat-card">
-                        <i class="fas fa-network-wired"></i>
-                        <h3>Communication</h3>
-                        <p>Networking & Protocols</p>
+                        <i class="fas fa-project-diagram"></i>
+                        <h3>4+</h3>
+                        <p>Major Projects</p>
                     </div>
                     <div class="stat-card">
-                        <i class="fas fa-cogs"></i>
-                        <h3>Projects</h3>
-                        <p>Simulation & Control</p>
+                        <i class="fas fa-certificate"></i>
+                        <h3>2+</h3>
+                        <p>Certifications</p>
                     </div>
                 </div>
             </div>
@@ -175,46 +151,43 @@
                 <div class="experience-card">
                     <div class="experience-header">
                         <div>
-                            <h3>Drone Systems Engineer (Swarm & Networking)</h3>
+                            <h3>Research Intern (Swarm Drones)</h3>
                             <h4>SkyFlock Uaviation Pvt. Ltd.</h4>
                         </div>
                         <span class="experience-date">Sept 2025 - Present</span>
                     </div>
                     <p class="experience-location"><i class="fas fa-map-marker-alt"></i> Remote</p>
                     <ul class="experience-points">
-                        <li>Architected and simulated swarm drone networks for collaborative missions using <strong>ROS2</strong>, <strong>PX4</strong>, and <strong>Gazebo</strong>.</li>
-                        <li>Developed Python-based telemetry and control interfaces for real-time drone fleet management.</li>
-                        <li>Designed and tested custom inter-drone communication protocols for robust, low-latency networking.</li>
-                        <li>Integrated AI-based decision modules for autonomous navigation and mission planning.</li>
+                        <li>Conducting basic research on Swarm Drone architectures and inter-drone communication protocols</li>
+                        <li>Utilizing simulation tools including <strong>Gazebo</strong> and <strong>PX4 Autopilot</strong> to model drone behaviors</li>
+                        <li>Working with <strong>ROS2</strong> (Robot Operating System) and <strong>MAVSDK</strong> for drone control and telemetry analysis</li>
                     </ul>
                     <div class="tech-tags">
                         <span class="tag">ROS2</span>
-                        <span class="tag">PX4</span>
                         <span class="tag">Gazebo</span>
-                        <span class="tag">Python</span>
-                        <span class="tag">Networking</span>
-                        <span class="tag">AI</span>
+                        <span class="tag">PX4</span>
+                        <span class="tag">MAVSDK</span>
                     </div>
                 </div>
+
                 <div class="experience-card">
                     <div class="experience-header">
                         <div>
-                            <h3>UI/UX Developer for Drone Control</h3>
-                            <h4>Freelance & Academic</h4>
+                            <h3>Instructor (Computer Science & Mathematics)</h3>
+                            <h4>Delhi Public School</h4>
                         </div>
-                        <span class="experience-date">2024 - 2025</span>
+                        <span class="experience-date">April 2022 - Dec 2023</span>
                     </div>
-                    <p class="experience-location"><i class="fas fa-map-marker-alt"></i> Remote</p>
+                    <p class="experience-location"><i class="fas fa-map-marker-alt"></i> Dharan, Nepal</p>
                     <ul class="experience-points">
-                        <li>Designed intuitive user interfaces for ground control stations using Python and Qt.</li>
-                        <li>Implemented real-time telemetry dashboards and mission planning tools for drone operators.</li>
-                        <li>Collaborated with system engineers to ensure seamless integration between UI and drone firmware.</li>
+                        <li>Taught <strong>Python Programming</strong> and computational logic to senior students, improving their coding proficiency</li>
+                        <li>Developed curriculum and teaching materials for computer science courses</li>
+                        <li>Mentored students in mathematics and problem-solving techniques</li>
                     </ul>
                     <div class="tech-tags">
                         <span class="tag">Python</span>
-                        <span class="tag">Qt</span>
-                        <span class="tag">UI/UX</span>
-                        <span class="tag">Telemetry</span>
+                        <span class="tag">Teaching</span>
+                        <span class="tag">Mathematics</span>
                     </div>
                 </div>
             </div>
@@ -485,25 +458,6 @@
     </button>
 
     <script src="script.js"></script>
-<script>
-// Theme toggle button logic
-const themeToggle = document.getElementById('theme-toggle');
-const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-const userTheme = localStorage.getItem('theme');
-if (userTheme === 'dark' || (!userTheme && prefersDark)) {
-    document.body.classList.add('dark-mode');
-    themeToggle.textContent = '☀️';
-} else {
-    document.body.classList.remove('dark-mode');
-    themeToggle.textContent = '🌙';
-}
-themeToggle.addEventListener('click', () => {
-    document.body.classList.toggle('dark-mode');
-    const isDark = document.body.classList.contains('dark-mode');
-    themeToggle.textContent = isDark ? '☀️' : '🌙';
-    localStorage.setItem('theme', isDark ? 'dark' : 'light');
-});
-</script>
 </body>
 </html>
 
