Update About Me section, set grey theme, remove light/dark mode

--- a/index.html
+++ b/index.html
@@ -64,25 +64,25 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>I am a passionate researcher and engineer currently pursuing my Master of Technology in Electrical Engineering at IIT Ropar. My research interests lie in <strong>5G/NOMA systems</strong>, <strong>Signal Processing</strong>, and <strong>Machine Learning</strong>.</p>
-                    <p>With experience in swarm drone architectures, adaptive filtering, and computer vision, I enjoy solving complex technical challenges and exploring innovative solutions at the intersection of communication systems and AI.</p>
-                    <p>When I'm not working on research, I share my knowledge as an educator, having taught Computer Science and Mathematics to senior students.</p>
+                    <p>I am a Master of Technology student at the Indian Institute of Technology, Ropar, specializing in Signal Processing and Communication. My interests include embedded systems, hardware design, and the application of modern communication theory to real-world engineering problems.</p>
+                    <p>I have hands-on experience with microcontrollers, flight controllers, and simulation environments such as PX4 and Gazebo. I enjoy building and integrating hardware and software for robust, scalable, and innovative tech solutions.</p>
+                    <p>My technical stack includes Python, C/C++, ROS2, PX4, Gazebo, and embedded firmware development. I am passionate about bridging the gap between hardware and software in modern engineering.</p>
                 </div>
                 <div class="about-stats">
                     <div class="stat-card">
-                        <i class="fas fa-graduation-cap"></i>
-                        <h3>7.37</h3>
-                        <p>Current CGPA</p>
+                        <span>Drone</span>
                     </div>
                     <div class="stat-card">
-                        <i class="fas fa-project-diagram"></i>
-                        <h3>4+</h3>
-                        <p>Major Projects</p>
+                        <span>Pixhawk</span>
                     </div>
                     <div class="stat-card">
-                        <i class="fas fa-certificate"></i>
-                        <h3>2+</h3>
-                        <p>Certifications</p>
+                        <span>PX4</span>
+                    </div>
+                    <div class="stat-card">
+                        <span>Gazebo</span>
+                    </div>
+                    <div class="stat-card">
+                        <span>MicroAir</span>
                     </div>
                 </div>
             </div>
