Add drone image as logo icon in navbar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <div class="nav-brand">Shashi Bhushan Jha</div>
+            <div class="nav-brand">
+                <img src="logo-drone.png" alt="Logo" style="height:36px;vertical-align:middle;margin-right:10px;">
+                Shashi Bhushan Jha
+            </div>
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
