Add AI chatbot widget with production backend URL

--- a/index.html
+++ b/index.html
@@ -458,6 +458,22 @@
     </button>
 
     <script src="script.js"></script>
+    
+    <!-- AI Chatbot Widget -->
+    <link rel="stylesheet" href="chat-widget.css">
+    <script src="chat-widget.js"></script>
+    <script>
+        // Initialize the AI chatbot widget
+        document.addEventListener('DOMContentLoaded', function() {
+            ChatWidget.init({
+                apiUrl: 'https://ai-portfolio-chatbot-apme.onrender.com',  // Production backend
+                position: 'bottom-right',
+                primaryColor: '#3b82f6',
+                title: "Shashi's AI Assistant",
+                subtitle: 'Ask me anything about Shashi!'
+            });
+        });
+    </script>
 </body>
 </html>
 
