--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shashi Bhushan Jha - Resume</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="chat-widget.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -32,6 +33,9 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
+            <div class="hero-profile-photo">
+                <img src="profile-photo.jpg" alt="Shashi Bhushan Jha">
+            </div>
             <h1 class="hero-title">
                 <span class="typing-text">Hi, I'm Shashi Bhushan Jha</span>
             </h1>
@@ -457,7 +461,27 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
+    <!-- Chat Widget Container -->
+    <div id="chat-widget-container"></div>
+    
+    <!-- Chatbot Call-to-Action -->
+    <div class="chatbot-cta">
+        <span class="cta-arrow">👈</span>
+        <span class="cta-text">Chat with my AI Bot!</span>
+    </div>
+
     <script src="script.js"></script>
+    <script src="chat-widget.js"></script>
+    <script>
+        // Initialize chat widget
+        ChatWidget.init({
+            apiUrl: 'https://your-backend-url.com', // Update with your actual backend URL
+            theme: 'dark',
+            position: 'bottom-right',
+            greeting: "Hi! I'm Shashi's AI Assistant. Ask me anything about my experience, projects, or skills!",
+            title: "Chat with Shashi's AI"
+        });
+    </script>
 </body>
 </html>
 
