Add hyperlinks to technical keywords (Drone, Pixhawk, PX4, Gazebo, MicroAir)

--- a/index.html
+++ b/index.html
@@ -91,24 +91,24 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>I am a Master of Technology student at the Indian Institute of Technology, Ropar, specializing in Signal Processing and Communication. My interests include embedded systems, hardware design, and the application of modern communication theory to real-world engineering problems.</p>
-                    <p>I have hands-on experience with microcontrollers, flight controllers, and simulation environments such as PX4 and Gazebo. I enjoy building and integrating hardware and software for robust, scalable, and innovative tech solutions.</p>
-                    <p>My technical stack includes Python, C/C++, ROS2, PX4, Gazebo, and embedded firmware development. I am passionate about bridging the gap between hardware and software in modern engineering.</p>
+                    <p>I have hands-on experience with microcontrollers, flight controllers, and simulation environments such as <a href="https://px4.io/" target="_blank" rel="noopener noreferrer">PX4</a> and <a href="https://gazebosim.org/" target="_blank" rel="noopener noreferrer">Gazebo</a>. I enjoy building and integrating hardware and software for robust, scalable, and innovative tech solutions.</p>
+                    <p>My technical stack includes Python, C/C++, ROS2, <a href="https://px4.io/" target="_blank" rel="noopener noreferrer">PX4</a>, <a href="https://gazebosim.org/" target="_blank" rel="noopener noreferrer">Gazebo</a>, and embedded firmware development. I am passionate about bridging the gap between hardware and software in modern engineering.</p>
                 </div>
                 <div class="about-stats">
                     <div class="stat-card">
-                        <span>Drone</span>
+                        <span><a href="https://en.wikipedia.org/wiki/Unmanned_aerial_vehicle" target="_blank" rel="noopener noreferrer">Drone</a></span>
                     </div>
                     <div class="stat-card">
-                        <span>Pixhawk</span>
+                        <span><a href="https://pixhawk.org/" target="_blank" rel="noopener noreferrer">Pixhawk</a></span>
                     </div>
                     <div class="stat-card">
-                        <span>PX4</span>
+                        <span><a href="https://px4.io/" target="_blank" rel="noopener noreferrer">PX4</a></span>
                     </div>
                     <div class="stat-card">
-                        <span>Gazebo</span>
+                        <span><a href="https://gazebosim.org/" target="_blank" rel="noopener noreferrer">Gazebo</a></span>
                     </div>
                     <div class="stat-card">
-                        <span>MicroAir</span>
+                        <span><a href="https://github.com/PX4/PX4-Autopilot/tree/main/src/modules/simulation/gz_bridge" target="_blank" rel="noopener noreferrer">MicroAir</a></span>
                     </div>
                 </div>
             </div>
@@ -185,13 +185,13 @@
                     <p class="experience-location"><i class="fas fa-map-marker-alt"></i> Remote</p>
                     <ul class="experience-points">
                         <li>Conducting basic research on Swarm Drone architectures and inter-drone communication protocols</li>
-                        <li>Utilizing simulation tools including <strong>Gazebo</strong> and <strong>PX4 Autopilot</strong> to model drone behaviors</li>
-                        <li>Working with <strong>ROS2</strong> (Robot Operating System) and <strong>MAVSDK</strong> for drone control and telemetry analysis</li>
+                        <li>Utilizing simulation tools including <strong><a href="https://gazebosim.org/" target="_blank" rel="noopener noreferrer">Gazebo</a></strong> and <strong><a href="https://px4.io/" target="_blank" rel="noopener noreferrer">PX4 Autopilot</a></strong> to model <a href="https://en.wikipedia.org/wiki/Unmanned_aerial_vehicle" target="_blank" rel="noopener noreferrer">drone</a> behaviors</li>
+                        <li>Working with <strong>ROS2</strong> (Robot Operating System) and <strong>MAVSDK</strong> for <a href="https://en.wikipedia.org/wiki/Unmanned_aerial_vehicle" target="_blank" rel="noopener noreferrer">drone</a> control and telemetry analysis</li>
                     </ul>
                     <div class="tech-tags">
                         <span class="tag">ROS2</span>
-                        <span class="tag">Gazebo</span>
-                        <span class="tag">PX4</span>
+                        <span class="tag"><a href="https://gazebosim.org/" target="_blank" rel="noopener noreferrer">Gazebo</a></span>
+                        <span class="tag"><a href="https://px4.io/" target="_blank" rel="noopener noreferrer">PX4</a></span>
                         <span class="tag">MAVSDK</span>
                     </div>
                 </div>
