Fix typo: MicroAir to MicoAir

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <span><a href="https://gazebosim.org/" target="_blank" rel="noopener noreferrer">Gazebo</a></span>
                     </div>
                     <div class="stat-card">
-                        <span><a href="https://micoair.com/flightcontroller_micoair743/" target="_blank" rel="noopener noreferrer">MicroAir</a></span>
+                        <span><a href="https://micoair.com/flightcontroller_micoair743/" target="_blank" rel="noopener noreferrer">MicoAir</a></span>
                     </div>
                 </div>
             </div>
